--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Me</title>
+      <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h1>Contact Me</h1>
@@ -20,7 +21,7 @@
         <input type="email" name="yourEmail" value=""><br>
         <label for="">Your Message:</label><br>
         <textarea name="yourMessage" rows="5" cols="80"></textarea>
-        
+
                       <input type="submit" name="">
       </form>
   </body>
